@@ -16,3 +16,6 @@ First release: "Thru These Architecht's Eyes", Nangband 0.1.0
   column.  --takk
 - Fix the Borland makefile so the lua object files are put in the right 
   place.  --takk
+- Made the birthscreens a lot slicker - they now use text_out_to_screen 
+  instead of hardwrapping.  Various things have also been rearranged to 
+  the entire process feels a lot cleaner.  --takk
